[project]
name = "day-10"
version = "0.1.0"
description = ""
authors = [
    {name = "Konrad Pagacz",email = "konrad.pagacz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "ortools (>=9.14.6206,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
