[project]
name = "python-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Konrad Pagacz",email = "konrad.pagacz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
